[gd_scene load_steps=3 format=3 uid="uid://delxsux7qm8o6"]

[ext_resource type="Script" path="res://characters/enemy.gd" id="1_b3g1x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rb1m"]
size = Vector2(32, 48)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_b3g1x")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 0.454902, 0, 1)
polygon = PackedVector2Array(16, 16, 16, -32, -16, -32, -16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_5rb1m")

[node name="CliffScanRight" type="RayCast2D" parent="."]
position = Vector2(24, 16)
target_position = Vector2(0, 70)

[node name="CliffScanLeft" type="RayCast2D" parent="."]
position = Vector2(-24, 16)
target_position = Vector2(0, 70)

[node name="WallScanRight" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)

[node name="WallScanLeft" type="RayCast2D" parent="."]
target_position = Vector2(-40, 0)
